objects/Business_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Relationship</relationshipLabel>
        <relationshipName>Business_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Relationship</relationshipLabel>
        <relationshipName>Business_Relationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountlookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <valueField>Account.Agency__r.Name</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Relationship (Account)</relationshipLabel>
        <relationshipName>Business_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Relationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>